<resources>
    <string name="app_name">Final Graph Project</string>
    <string name="s_one">1</string>
    <string name="s_two">2</string>
    <string name="s_three">3</string>
    <string name="s_four">4</string>
    <string name="s_five">5</string>
    <string name="s_six">6</string>
    <string name="s_seven">7</string>
    <string name="s_eight">8</string>
    <string name="s_nine">9</string>
    <string name="b_solve">Solve</string>
    <string name="btn_back">Solve New Sudoku Table</string>

</resources>